--- a/typewriter_starter_files/typewriter.html
+++ b/typewriter_starter_files/typewriter.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Typewriter</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Special+Elite"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="typewriter.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1
+        id="type-writer"
+        class="typewritten"
+        data-text="Creativity is allowing yourself to make mistakes..."
+      ></h1>
+    </div>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<title>Typewriter</title>
-	<link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet" />
-	<link rel="stylesheet" href="typewriter.css" />
-</head>
+    <div id="sounds">
+      <audio id="typekey1" src="typekey1.mp3"></audio>
+      <audio id="typekey2" src="typekey2.mp3"></audio>
+      <audio id="typespace" src="typespace.mp3"></audio>
+      <audio id="typelast" src="typelastkey.mp3"></audio>
+      <audio id="typereturn" src="typecarriagereturn.mp3"></audio>
+    </div>
 
-<body>
-	<div class="container">
-		<h1 id="type-writer" class="typewritten" data-text="Creativity is allowing yourself to make mistakes..."></h1>
-	</div>
-
-	<div id="sounds">
-		<audio id="typekey1" src="typekey1.mp3"></audio>
-		<audio id="typekey2" src="typekey2.mp3"></audio>
-		<audio id="typespace" src="typespace.mp3"></audio>
-		<audio id="typelast" src="typelastkey.mp3"></audio>
-		<audio id="typereturn" src="typecarriagereturn.mp3"></audio>
-	</div>
-
-	<script src="typewriter.js"></script>
-	<script></script>
-</body>
-
+    <script src="typewritter2.js"></script>
+    <script></script>
+  </body>
 </html>
